# ghs

./: .coveragerc  .dockerignore  .gitignore  .mypy.ini  Dockerfile  LICENSE  MANIFEST  Makefile  Pipfile  Procfile  README.md  app.json  dev_requirements.txt  heroku.yml  mypy.ini  newrelic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/workflows/: actions_cicd.yml  cicd.yml  cid.yml  codeql-analysis.yml  codeql.yml  deploy.yml  django.yml
deploy/: schema.sql
doc/ghs/: index.html  test_placeholder.html
doc/ghs/controller/: index.html
doc/ghs/model/: commons.html  index.html  test_commons.html
doc/ghs/view/: index.html
docs/database_modeling/: ghs.dbm
docs/design/database/: schema.psql
docs/profiling_report/: githubstars.prof
ghs/: __init__.py  test_placeholder.py
ghs/controller/: __init__.py  commons.py
ghs/controller/stars/: fetch.py  front.py  test_update.py  update.py
ghs/model/: __init__.py  test_commons.py
ghs/model/application/: __init__.py  commons.py  front.py  test_front.py  test_update.py  update.py
ghs/model/database/: connector.py  database.py  schema.psql  schema.sql  test_database.py
ghs/view/: __init__.py
ghstars/: manage.py
ghstars/ghstars/: asgi.py  settings.py  urls.py  wsgi.py
githooks/: pre-commit
githubstars/: asgi.py  manage.py  settings.py  urls.py
githubstars/githubstars/: settings.py  urls.py  wsgi.py
githubstars/stars/: __init__.py  apps.py
gitstars/: admin.py  apps.py  models.py  operations.py  ops.py  tasks.py
gitstars/migrations/: 0001_initial.py  0002_auto_20161017_1119.py  0003_auto_20161017_1201.py  0004_project_full_name.py  0005_remove_project_initial_watchers.py  0006_auto_20161018_1145.py  0007_project_current_stars.py  0008_project_notes.py
legacy_ghs/model/: commons.py  test_commons.py
migrations/: alembic.ini
old_lib/: admin.py  operations.py
old_lib/migrations/: 0002_auto_20170630_1317.py
stars/: admin.py  mega_update.py  models.py
stars/migrations/: 0001_initial.py
tests/controller/: test_commons.py
typings/alembic/: __init__.pyi  command.pyi  config.pyi
typings/asyncache/: __init__.pyi
typings/asyncpg/: __init__.pyi  cluster.pyi  compat.pyi  connect_utils.pyi  connection.pyi  connresource.pyi  cursor.pyi  introspection.pyi  pool.pyi  prepared_stmt.pyi  serverversion.pyi  transaction.pyi  types.pyi
typings/sqlalchemy/: __init__.pyi  events.pyi  exc.pyi  inspection.pyi  log.pyi  processors.pyi  schema.pyi  types.pyi
(+318 files in other folders)
