[tool.poetry]
name = "ghs"
version = "2.1.0"
description = "My GitHub Stars"
authors = ["Timothy Makobu"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
starlette = "^0.15.0"
asyncpg = "^0.23.0"
httptools = "^0.2.0"
PyGithub = "^1.54.1"
Jinja2 = "^3.0.0"
uvloop = "^0.15.0"
pydantic = "^1.8.1"
cachetools = "^4.2.1"
asyncache = "^0.1.1"
types-cachetools = "^0.1.7"
SQLAlchemy = "^1.4.20"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.910"
pyflakes = "^2.2.0"
pytest-asyncio = "^0.15.0"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
ipython = "^7.19.0"
black = "^21.4b0"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
