[tool.poetry]
name = "ghs"
version = "2.0.0"
description = "My GitHub Stars"
authors = ["Timothy Makobu <tim@makobu.name>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
starlette = "^0.23.1"
PyGithub = "^1.54.1"
Jinja2 = "^3.0.0"
requests = "^2.25.1"
hiredis = "^2.0.0"
redis = "^4.4.1"
pydantic = "^1.8.1"
types-cachetools = "^0.1.7"
asyncache = "^0.3.1"
asyncpg = "^0.27.0"
httpx = "^0.23.3"
uvloop = "^0.17.0"
httptools = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.4.0"
flake8 = "^6.0.0"
pytest-timeout = "^2.1.0"
ipython = "^8.8.0"
black = "^22.12.0"
watchfiles = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
